<resources>
    <!-- Preferences -->
    <string name="key_rating_review" translatable="false">key_rating_review</string>
    <string name="key_feedback" translatable="false">key_feedback</string>
    <string name="key_version" translatable="false">key_version</string>
    <string name="key_developers" translatable="false">key_developers</string>
    <string name="key_sign_out">key_sign_out</string>
    <string name="default_notification_channel_id" tanslatable="false">hppk toctw</string>

    <string name="app_name">TOCTW 2019</string>
    <string name="app_full_name">HPPK 임직원 자녀 방문 행사 2019</string>
    <string name="home">홈</string>
    <string name="stamp">스탬프</string>
    <string name="settings">설정</string>

    <string name="app_info">앱 정보</string>
    <string name="rating_review"><![CDATA[평점 및 리뷰]]></string>
    <string name="rating_review_details">다른 사용자에게 의견을 들려주세요.</string>
    <string name="send_feedback">피드백 보내기</string>
    <string name="send_feedback_details">문제점을 보고하거나 새로운 기능을 추천해주세요.</string>
    <string name="email" translatable="false">goldforestdev@gmail.com</string>
    <string name="send_feedback_email_subject">[%1$s][%2$s] send feedback</string>
    <string name="send_feedback_email_details">Device Model: \nAndroid OS Version: \nIssue: \n</string>
    <string name="version" translatable="false">버전</string>
    <string name="developers">개발자</string>
    <string name="dev_yjlim">Yeonjung Lim</string>
    <string name="dev_yjlim_email" translatable="false">yeonjung.lim@hp.com</string>
    <string name="dev_hjkim">Hyeongju Kim</string>
    <string name="dev_hjkim_email" translatable="false">hyeongju.kim@hp.com</string>
    <string name="dev_yhkim">Yoonho Aarom Kim</string>
    <string name="dev_yhkim_email" translatable="false">yoonho.kim@hp.com</string>
    <string name="stamp_message">모든 스탬프를 모아 기념품을 받으세요!</string>
    <string name="program">프로그램</string>
    <string name="previous_events">작년 행사</string>
    <string name="more_program_info">모든 프로그램 정보 보기</string>
    <string name="notice">공지</string>
    <string name="authentication">인증</string>
    <string name="add_notice">공지 추가하기</string>
    <string name="sign_out">로그아웃</string>

    <string name="busy_good">여유</string>
    <string name="busy_normal">보통</string>
    <string name="busy_very">혼잡</string>
    <string name="busy_close">종료</string>
    <string name="splash_bottom_text" translatable="false">Copyright<![CDATA[ⓒ]]> 2019 Gold Forest Team.</string>
    <string name="hint_input_child_name">자녀의 이름을 입력하세요</string>
    <string name="done">등록</string>
    <string name="message_add_child">스탬프 행사를 위해 자녀의 이름을 알려주세요</string>
    <string name="message_add_child_2">입력하신 정보는 기기 내부에만 저장되며 외부로는 공유되지 않습니다.</string>

    <string name="mission_clear">미션 완료</string>
    <string name="child_stamp">%1$s\'s 스탬프</string>
    <string name="my_children">아이들</string>
    <string name="confirm_delete_child">등록하시 정보를 삭제하시겠습니까?</string>
    <string name="delete">삭제</string>
    <string name="title">제목</string>
    <string name="body">내용</string>
    <string name="send">공지 알림 보내기</string>
    <string name="information">안내 사항</string>
    <string name="contact">기타 문의</string>
    <string name="staff_park">박 윤석</string>
    <string name="staff_lee">이 경미</string>
    <string name="complete">완료</string>
    <string name="in_progress">진행 중</string>
    <string name="info_schedule">일정 안내</string>
    <string name="info_lunch">중식 안내</string>
    <string name="base_info">안내 사항</string>
    <string name="security_env_details">
        - 행사 중에는 반드시 <![CDATA[<font color="#D81B60">보호자와 동행해 주세요.</font><br/>]]>
        - 행사 당일 <![CDATA[<font color="#D81B60">이름표는 반드시 부착하여 주세요.</font><br/>]]>
        - 계단 사용 시 <![CDATA[<font color="#D81B60">안전 사고에 유의하여 주세요.</font><br/>]]>
        - 근무 공간이므로 <![CDATA[<font color="#D81B60">쓰레기는 지정된 장소에 버려주세요.</font>]]>
    </string>

    <string name="even_notice">행사 공지</string>
    <string name="event_welcome_msg">에이치피프린팅코리아 판교 Site를 방문하신 임직원 가족 여러분을 진심으로 환영합니다.</string>
    <string name="add_child">자녀 등록</string>
    <string name="no_children">먼저 아이를 등록해주세요.</string>
    <string name="program_info">프로그램을 누르면 자세한 정보 확인이 가능합니다.</string>

    <string name="empty_reviews">작성된 리뷰가 없습니다.</string>
    <string name="submit">게시</string>
    <string name="hint_input_review">이곳에서의 경험을 자세히 공유해 주세요.</string>
    <string name="need_signin">로그인이 필요한 기능입니다.</string>
    <string name="sign_in">로그인</string>
    <string name="tos_pp">\'Google 계정으로 시작하기\'를 통해 시작하시면, \n본 서비스 이용 약관과 개인정보 취급방침에 동의한 것으로 간주됩니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review">리뷰</string>

</resources>
