<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/boothFragment"
        android:enabled="true"
        android:icon="@drawable/ic_schedule"
        android:title="@string/event_program"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/childrenFragment"
        android:enabled="true"
        android:icon="@drawable/ic_smile"
        android:title="@string/stamp"
        app:showAsAction="ifRoom" />

    <item android:title="@string/information">
        <menu>
            <item
                android:id="@+id/infoFragment"
                android:enabled="true"
                android:title="안내 사항"
                android:icon="@drawable/ic_info"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <group android:id="@+id/menuSettings">
        <item
            android:id="@+id/settingsFragment"
            android:enabled="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            app:showAsAction="ifRoom" />
    </group>

</menu>