<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.hppk.toctw.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_schedulesFragment"
            app:destination="@id/schedulesFragment" />
    </fragment>
    <fragment
        android:id="@+id/schedulesFragment"
        android:name="com.hppk.toctw.ui.schedules.SchedulesFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedules" />
    <fragment
        android:id="@+id/stampsFragment"
        android:name="com.hppk.toctw.ui.stamps.StampsFragment"
        android:label="@string/stamp"
        tools:layout="@layout/fragment_stamps" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.hppk.toctw.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_developersFragment"
            app:destination="@id/developersFragment" />
    </fragment>
    <fragment
        android:id="@+id/developersFragment"
        android:name="com.hppk.toctw.ui.settings.DevelopersFragment"
        android:label="@string/developers"
        tools:layout="@layout/fragment_developers" >
        <action
            android:id="@+id/action_developersFragment_to_authFragment"
            app:destination="@id/authFragment" />
    </fragment>
    <fragment
        android:id="@+id/authFragment"
        android:name="com.hppk.toctw.auth.AuthFragment"
        android:label="@string/authentication"
        tools:layout="@layout/fragment_auth" />
</navigation>