<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.children.add.AddChildrenFragment">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="52dp"
        android:gravity="center"
        android:text="@string/message_add_child"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvMessage2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:text="@string/message_add_child_2"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChildren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/tvMessage2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:src="@drawable/ic_male"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/btnDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etName" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:hint="@string/hint_input_child_name"
        app:layout_constraintTop_toTopOf="@id/ivGender"
        app:layout_constraintBottom_toBottomOf="@id/ivGender"
        app:layout_constraintStart_toEndOf="@id/ivGender"
        app:layout_constraintEnd_toStartOf="@id/ivAdd" />

    <ImageView
        android:id="@+id/ivAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/selector_add"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/ivGender"
        app:layout_constraintBottom_toBottomOf="@id/ivGender"
        app:layout_constraintStart_toEndOf="@id/etName"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnDone"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/done"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>